Fix css: do not auto break on pre code

--- a/assets/css/module/markdown.styl
+++ b/assets/css/module/markdown.styl
@@ -52,6 +52,9 @@
     margin-bottom $markdown-margin-bottom
     code
       padding 1.4em
+      // don't auto break
+      word-wrap normal
+      white-space pre
 
   blockquote
     position relative
